--- a/style.css
+++ b/style.css
@@ -57,6 +57,16 @@ body {
 #resume-parent {
   padding: 4em 0;
   background: #EEE;
+        display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 700px;
+    align-items: center;
+}
+
+#resume-title {
+    text-align: center;
+    width: 100%;
 }
 
 .resume-child {
@@ -64,10 +74,12 @@ body {
   margin: 1em;
   background: #FFF;
   color: #515251;
+    width: 250px;
 }
 
 .div-title {
   padding: 0.5em;
   font-size: 1.25em;
   background: #B4DBE5;
+    text-align: center;
 }
